# herdr-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.rs  server.rs
src/components/: Architecture.tsx  Documentation.tsx  DynamicForm.tsx  Footer.tsx  Hero.tsx  Install.tsx  Logo.tsx  Playground.tsx  RecipeBuilder.tsx  RecipeLibrary.tsx  RecipeStep.tsx  ResponseViewer.tsx  ToolRunner.tsx  Tools.tsx  VariablePanel.tsx  VariableStore.tsx  VariablesPage.tsx
src/recipes/: index.ts  recipeDb.ts
